--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "18.2.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.4"
+    "react-katex": "^3.0.1",
+    "react-markdown": "^8.0.4",
+    "remark-math": "^5.1.1"
   }
 }
